--- a/style.css
+++ b/style.css
@@ -78,3 +78,8 @@ nav{
 nav li:hover{
   background-color: mintcream;
 }
+#back{
+  margin-top: 30px;
+  margin-left: 220px;
+  margin-bottom: 50px;
+}
